# fmpsdk

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  __init__.py  fmpsdk-example.py  pyproject.toml
config/: settings.toml.example
fmpsdk/: __init__.py  alternative_data.py  available_data.py  bulk.py  calendar_data.py  commodities.py  company_profile.py  company_valuation.py  config.py  data_compression.py  economics.py  financial_growth_ratios.py  financial_statements.py  forex.py  general.py  insider_trading.py  institutional_fund.py  market_indexes.py  news.py  price_target.py  quote.py  search_functions.py  settings.py  shares_float.py  social_sentiment.py  stock_market.py  stock_screener.py  stock_time_series.py  technical_indicators.py  test.ipynb  valuation_metrics.py
fmpsdk/tools/: chat.py  doc2json.py
